feat: add contact and cannot add second contact for now

--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
         </div> -->
         <!-- Contact Row Ends -->
       </div>
+      <!-- The Popup Modal -->
+      <div class="modal">
+        <div class="modal-content">
+          <h3 class="modal-title">some title</h3>
+          <div class="modal-body">some content, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit,
+            doloremque.</div>
+          <div class="modal-buttons">
+            <button id="modalSubmitButton" class="modal-submit-button buttons">Submit</button>
+            <button id="modalCancelButton" class="modal-close-button buttons">Cancel</button>
+          </div>
+        </div>
+      </div>
     </main>
   </div>
 </body>
